Fix spacing between post metadata and self post text

--- a/style/components/_news-item.scss
+++ b/style/components/_news-item.scss
@@ -4,7 +4,7 @@
 
 .news-item__text {
   padding: 0;
-  margin: 0;
+  margin: 1em 0 0;
 
   color: $gray;
   font-size: 0.8125rem;
